- Save open tabs with unloaded URLs.
- Fix bug: when selecting articles list via right-click, menu items were disabled.
- When manually refreshing all subscriptions, reset the automatic refresh timer.
- Article title appears when article is dragged to iChat (and probably other to apps).
- If a feed item lacks a guid, identify the item by full title and link rather than by a hash.
- Added Applescript command: "mark all subscriptions read"

2.1.0.2108
----------
- Convert InfoPlist.strings files to UTF-16.
- Fix bug with marking all subscriptions read from group or smart folder.

2.1.0.2107
----------
- Fix article selection after deleting or restoring.
- Fix bug: deleted article wasn't removed from trash when using filter.

2.1.0.2106
----------
- Only allow the active web view to set the status bar text.
- Added Simplified Chinese localisation. (Thanks to Arsen Liang).
- Don't create a new article if the only difference is the article link.
- Fix bug: article list rows were too small for text.
- Fix bug: next unread command didn't respect folder unexpanded state.
- Fix bug: articles with date but no time were sometimes missed because of midnight timestamp.
- Turn off article updating by default.
- Speed up folder loading by only parsing visible summaries.
- Fix folder refreshing for mark read/unread and undo.

2.1.0.2105
----------
- Add Blog With feature.
- Fix bug where mouse was tracking wrong browser tab.
- Fix bug: searching in 'any' smart folders wasn't done correctly.
- Updated all localisation except Traditional Chinese.
- Added Brazilian Portuguese localisation (thanks to Helvécio Mafra).
- Change URL with feed:// to http:// during refresh.
- Fix bug with expanding file:// path.
- Compare article titles case insensitively when looking for updates.
- Fix warning message for missing style.
- Add hidden preference to disable checking for updated articles.
- After clicking link in article pane to open in foreground of external browser,