@@ -44,6 +44,10 @@ menus. To see a contextual menu, press the Control key and click the item.</p>
     <td>Flags the selected articles.</td>
   </tr>
   <tr>
+    <td>n</td>
+    <td>Moves to the next unread article.</td>
+  </tr>
+  <tr>
     <td>&lt;</td>
     <td>Displays the previous viewed article or web page.</td>
   </tr>
