@@ -21,7 +21,8 @@ Thanks!
 - When manually refreshing all subscriptions, reset the automatic refresh timer.
 - Article title appears when article is dragged to iChat (and probably other to apps).
 - If a feed item lacks a guid, identify the item by full title and link rather than by a hash.
-- Added Applescript command: "mark all subscriptions read"
+- Added Applescript command: "mark all subscriptions read".
+- Single-key shortcut 'n' for Next Unread command.
 
 2.1.0.2108
 ----------
